<resources>
    <string name="app_name">MyContacts</string>
    <string name="FullName">Boris Pessano</string>
    <string name="Telefono">099456123</string>
    <string name="mail"> boris@gmail.com</string>
    <string name="description">Contact Description</string>
    <string name="pName">Name</string>
    <string name="pPhone">Phone</string>
    <string name="pEmail">Email</string>
    <string name="btnNext">Next</string>
    <string name="tvConfirm">Confirm Contact</string>
    <string name="pDate">Fecha</string>
    <string name="fecha">30/12/20</string>
</resources>