<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_name"
        android:id="@+id/etFullname"
        android:text="@string/FullName"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"/>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/dpCalendar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_name"
        android:id="@+id/etPhone"
        android:text="@string/Telefono"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_name"
        android:id="@+id/etEmail"
        android:text="@string/mail"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_name"
        android:id="@+id/etDescription"
        android:text="@string/description"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ButtonNext"
        android:text="@string/btnNext"
        android:id="@+id/btnNext"
        android:onClick="Next"/>

</androidx.appcompat.widget.LinearLayoutCompat>